--- a/lab_3.html
+++ b/lab_3.html
@@ -1,2 +1,20 @@
 <html>
+    <head>
+        <title>Lab 3</title>
+    </head>
+    <link rel="stylesheet" href="lab_3_style.css">
+
+    <body>
+        <!-- heading -->
+         <!-- same div class -->
+        <header id="bar">
+            <!-- header should have h1 -->
+            <h1>Lab 3 - Rock Paper Scissors</h1>
+        </header>
+
+        <!-- footing -->
+        <footer id="bar">
+            <p>This is a footer, maybe I should make it interesting, but I am pretty boring</p>
+        </footer>
+    </body>
 </html>
