--- a/lab_3.html
+++ b/lab_3.html
@@ -12,6 +12,19 @@
             <h1>Lab 3 - Rock Paper Scissors</h1>
         </header>
 
+        <!-- body -->
+
+        <!-- sidebar -->
+
+        <!-- nav -->
+         <nav id="main-nav">
+            <ul>
+                <li>Yahoo Finance</li>
+                <li>Gemini</li>
+                <li> Testudo</li>
+            </ul>
+         </nav>
+
         <!-- footing -->
         <footer id="bar">
             <p>This is a footer, maybe I should make it interesting, but I am pretty boring</p>
