--- a/lab_3.html
+++ b/lab_3.html
@@ -19,9 +19,10 @@
         <!-- nav -->
          <nav id="main-nav">
             <ul>
-                <li>Yahoo Finance</li>
-                <li>Gemini</li>
-                <li> Testudo</li>
+                <!-- 3 elements, when clicked opens up a site-->
+                <a href="https://finance.yahoo.com/?guccounter=1&guce_referrer=aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8&guce_referrer_sig=AQAAAJMKQ-DCRTCZb49zDEuPkTYrtPTj0hcDmZ9abBP6qnuD7kRCUV_SjquJtI0mjJZ9nqnI6lbrCef_URJn1COuOXSe6FT8LNaqTdItH7ow-3hHZb7ucb5RiCd9wMlcSkKjwvGYJQg7YG_rvvai6qdSyfBf9pXI5He6DpaJ9TaH5XBx"><li>Yahoo Finance</li></a>
+                <a href="https://gemini.google.com/"><li>Gemini</li></a>
+                <a href="https://www.testudo.umd.edu/"><li>Testudo</li></a>
             </ul>
          </nav>
 
