--- a/lab_3.html
+++ b/lab_3.html
@@ -12,19 +12,53 @@
             <h1>Lab 3 - Rock Paper Scissors</h1>
         </header>
 
-        <!-- body -->
-
-        <!-- sidebar -->
-
         <!-- nav -->
-         <nav id="main-nav">
+        <nav id="main-nav">
             <ul>
                 <!-- 3 elements, when clicked opens up a site-->
                 <a href="https://finance.yahoo.com/?guccounter=1&guce_referrer=aHR0cHM6Ly93d3cuZ29vZ2xlLmNvbS8&guce_referrer_sig=AQAAAJMKQ-DCRTCZb49zDEuPkTYrtPTj0hcDmZ9abBP6qnuD7kRCUV_SjquJtI0mjJZ9nqnI6lbrCef_URJn1COuOXSe6FT8LNaqTdItH7ow-3hHZb7ucb5RiCd9wMlcSkKjwvGYJQg7YG_rvvai6qdSyfBf9pXI5He6DpaJ9TaH5XBx"><li>Yahoo Finance</li></a>
                 <a href="https://gemini.google.com/"><li>Gemini</li></a>
                 <a href="https://www.testudo.umd.edu/"><li>Testudo</li></a>
             </ul>
-         </nav>
+        </nav>
+
+        <!-- body -->
+        <!-- main content -->
+         <div class= "main-container">
+            <div class="chosing">
+                <h2>Please choose one of the following.</h2>
+                <!-- form -->
+                <form>
+                    <!-- name label-->
+                    <label for="name">Name:</label>
+                    <!-- name required -->
+                    <input type="text" id="name" required>
+                    <br>
+                    <label for="choice">Your choice:</label>
+                    <!-- select that chooses rock, paper, sicssors-->
+                    <select name="choice" id="choice">
+                        <option value="rock">Rock</option>
+                        <option value="scissors">Scissors</option>
+                        <option value="paper">Paper</option>
+                    </select>
+                    <br>
+                    <input type="submit">
+                </form>
+            </div>
+
+            <aside id="rules">
+                <h2>Rules</h2>
+                <!-- rules on how to play rock, paper, scissors-->
+                <h2>You must choose Rock, Paper or Scissors</h2>
+                <h2> The Combos are as follows:</h2>
+                <ul>
+                    <li>Rock beats Scissors</li>
+                    <li>Scissors beats Paper</li>
+                    <li>Paper beats Rock</li>
+                </ul>
+            </aside>
+         </div>
+        <!-- sidebar -->
 
         <!-- footing -->
         <footer id="bar">
